--- a/2100/CMakeLists.txt
+++ b/2100/CMakeLists.txt
@@ -4,4 +4,4 @@ project(svadebny_obed)
 
 add_executable(svadebny_obed
 main.cpp)
-set_target_properties(simple PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)
+set_target_properties(svadebny_obed PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)
